fix navbar on small screens, small other tweaks

--- a/css/base.scss
+++ b/css/base.scss
@@ -107,7 +107,14 @@ nav.navbar {
 			font-size: 1rem;
 			margin: 0 auto;
 			justify-content: center;
+			-webkit-box-orient: horizontal;
+			-webkit-box-direction: normal;
+			-ms-flex-direction: row;
+			flex-direction: row;
 
+			li {
+				padding: 0 0.5rem;
+			}
 			li:first-child a {
 				padding-left: 0;
 			}
@@ -120,7 +127,7 @@ nav.navbar {
 
 .title {
 	font-style: italic;
-	margin-top: 1rem;
+	margin-top: 0.75rem;
 	text-align: center;
 }
 .title-rss {
