--- a/css/home.css
+++ b/css/home.css
@@ -47,7 +47,7 @@
 }
 
 .hero-text {
-	background: rgba(0, 0, 0, 0.75);
+	background: rgba(0, 0, 0, 0.6);
 	color: white;
 	padding: 1rem;
 }
